# Fitcker

./: .gitignore  App.js  README.md  app.json  compose.yml  package-lock.json  package.json  tailwind.config.js
backend/: __init__.py  app.py  db.py  dockerfile  model.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  app.py  db.py  model.py  security.py  test_user.py  test_workout_plan.py
backend/src/models/: db.py  exercise.py  plan.py  routine.py  tables.py  user.py  workout.py  workout_plan.py  workout_routine.py
backend/src/routes/: exercises.py  plans.py  plans_routines.py  routines.py  routines_exercises.py  users.py  workout_exercises.py  workout_plans.py  workout_routines.py  workouts.py
backend/src/tests/: conftest.py  constants.py  test_plan_schemathesis.py  test_routine_schemathesis.py  test_user.py  test_user_schemathesis.py  test_workout_plan.py  utils.py
conf/: app.env  db.env
db/: CS180.lun  CS180.sql
frontend/: .gitignore  App.js  app.json  babel.config.js  config.jsx  jestSetup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: createExercise.jsx  createRoutine.jsx  createSection.jsx  createWorkout.js  createWorkout.jsx  createWorkoutPlan.jsx  customButton.jsx  exerciseForm.jsx  markSets.js  markSets.jsx  myExercises.jsx  myRoutines.jsx  myWorkoutPlans.jsx  myWorkouts.js  myWorkouts.jsx  profile.jsx  routineForm.jsx  stats.jsx  statsCalendar.jsx  statsGraphs.jsx  userBiometrics.jsx  userInfo.jsx  userNotif.jsx  (+5 more)
screens/: logTab.js  myTabs.js  profileTab.js  statsTab.js
(+80 files in other folders)
