[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ale18V", email = "alebombarda@icloud.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "mysql-connector-python>=9.2.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.10.6",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.20",
    "sqlmodel==0.0.16",
    "uvicorn==0.27.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "schemathesis>=3.39.8",
]
